EditToolbar/EditToolbar.css
/* CSS StyleSheet for Toolbar extensions */

/* MEDIAWIKI DEPENDENT IDs */
form#editform {
	margin: 0;
	padding: 0;
	padding-right: 2px;
}
textarea#wpTextbox1 {
	border: solid silver 1px;
	padding: 0;
	margin-top: -2px;
}
/* ... */
div#edittoolbar {
	border: solid silver 1px;
	border-bottom-width: 0;
	background-color: #EEEEEE;
}
div#edittoolbar div.tabs,
div#edittoolbar div.group {
	float: left;
	height: 26px;
	margin: 3px;
	padding-left: 3px;
	border-left: solid 1px #DDDDDD;
}
div#edittoolbar div.group:first-child {
	border-left: none;
}
body.rtl div#edittoolbar div.tabs,
body.rtl div#edittoolbar div.group {
	float: right;
	padding-left: 0;
	padding-right: 3px;
	border-left: none;
	border-right: solid 1px #DDDDDD;
}
body.rtl div.group:first-child {
	border-right: none;
}
div#edittoolbar div.sections {
	float: left;
	width: 100%;
	clear: both;
}
body.rtl div#edittoolbar div.sections {
	float: right;
}
div#edittoolbar div.sections > div.section {
	display: none;
	float: left;
	width: 100%;
	border-top: solid 1px #DDDDDD;
}
body.rtl div#edittoolbar div.sections > div.section {
	float: right;
}
div#edittoolbar div.group > div.label {
	float: left;
	border: 0px;
	height: 22px;
	line-height: 22px;
	margin: 2px;
	margin-left: 5px;
	margin-right: 8px;
	color: #777777;
	cursor: default;
}
body.rtl div#edittoolbar div.group > div.label {
	float: right;
	margin-left: 8px;
	margin-right: 5px;
}
div#edittoolbar div.group > img {
	float: left;
	border: 0px;
	height: 22px;
	width: 22px;
	padding: 2px;
	cursor: pointer;
}
body.rtl div#edittoolbar div.group > img {
	float: right;
}
div#edittoolbar div.group > select {
	float: left;
	margin: 2px;
	height: 22px;
	cursor: pointer;
}
body.rtl div#edittoolbar div.group > select {
	float: right;
}
div#edittoolbar div.index {
	float: left;
	width: 20%;
	height: 125px;
	overflow: auto;
}
div#edittoolbar div.index > div {
	padding: 4px;
	padding-left: 6px;
	cursor: pointer;
	color: #00528C;
}
div#edittoolbar div.index > div.current {
	background-color: #FAFAFA;
	color: #333333;
	cursor: default;
}
div#edittoolbar div.index > div:first-child {
	border-top: none;
}
div#edittoolbar div.pages {
	float: right;
	width: 80%;
	height: 125px;
	overflow: auto;
	background-color: #FAFAFA;
}
div#edittoolbar div.pages > div.page {
	display: none;
}
div#edittoolbar div.pages > div.page:first-child {
	display: block;
}
div#edittoolbar div.pages > div.page > table {
	padding-left: 5px;
	padding-right: 5px;
	background: none;
}
div#edittoolbar div.pages > div.page > table th {
	color: #999999;
}
div#edittoolbar div.pages > div.page > table td {
	color: black;
	border-top: solid 1px #EEEEEE;
}
div#edittoolbar div.pages > div.page > table tr:first-child > td {
	border-top: solid 1px #DDDDDD;
}
div#edittoolbar div.pages > div.page > table th,
div#edittoolbar div.pages > div.page > table td {
	text-align: left;
	padding: 5px;
	margin: 0px;
}
div#edittoolbar div.pages > div.page > table td.syntax {
	font-family: monospace;
}
div#edittoolbar-section-help div.page > table td.syntax,
div#edittoolbar-section-help div.page > table td.result {
	width: 40%;
}
div#edittoolbar-section-help div.page > table td.description {
	width: 20%;
}
div#edittoolbar-section-characters div.page > a {
	border: solid 1px #DDDDDD;
	padding: 5px;
	padding-left: 8px;
	padding-right: 8px;
	margin-left: 5px;
	margin-top: 5px;
	height: 1em;
	float: left;
	display: block;
	color: black;
	text-decoration: none;
}
div#edittoolbar-section-characters div.page > a:hover {
	background-color: white;
	text-decoration: none;
	border-color: #a8d7f9;
}
div#edittoolbar-section-characters div.page > div.character {
}
div#edittoolbar div.tabs > div.tab {
	float: left;
	line-height: 26px;
}
body.rtl div#edittoolbar div.tabs > div.tab {
	float: right;
}
div#edittoolbar div.tabs > div.tab > a,
div#edittoolbar div.tabs > div.tab > a:visited {
	padding-left: 18px;
	padding-right: 12px;
	display: block;
	height: 26px;
	cursor: pointer;
	color: #00528C;
	background-image: url(images/arrow-right.png);
	background-position: left center;
	background-repeat: no-repeat;
}
body.rtl div#edittoolbar div.tabs > div.tab > a,
body.rtl div#edittoolbar div.tabs > div.tab > a:visited {
	padding-left: 12px;
	padding-right: 18px;
	background-position: right center;
}
div#edittoolbar div.tabs > div.tab > a.current,
div#edittoolbar div.tabs > div.tab > a.current:visited {
	color: #333333;
	background-image: url(images/arrow-down.png);
}
div#edittoolbar div.tabs > div.tab > a.current:hover {
	text-decoration: none;
}

